--- a/components/register/index.html
+++ b/components/register/index.html
@@ -3,27 +3,28 @@
         <form id="derby-auth-register" action='/register' method='post'>
 
             <div class="control-group {#if .errors.username}error{/}">
-                <input type='text' name="username" placeholder="Username" x-bind="blur:usernameBlur" value="{.username}"/>
+                <input type='text' name="username" placeholder="Användarnamn" x-bind="blur:usernameBlur" value="{.username}"/>
                 <span class="help-inline">{.errors.username}</span>
             </div>
 
             <div class="control-group {#if .errors.email}error{/}">
-                <input type='text' name="email" placeholder="Email" x-bind="blur:emailBlur" value="{.email}"/>
+                <input type='text' name="email" placeholder="e-post" x-bind="blur:emailBlur" value="{.email}"/>
                 <span class="help-inline">{.errors.email}</span>
             </div>
 
             <div class="control-group {#if .errors.password}error{/}">
-                <input type='password' name="password" placeholder="Password" value="{.password}"/>
+                <input type='password' name="password" placeholder="Lösenord" value="{.password}"/>
                 <span class="help-inline">{.errors.password}</span>
             </div>
 
             <div class="control-group {#if .errors.passwordConfirmation}error{/}">
-                <input type='password' name="password-confirmation" placeholder="Password Confirmation" value="{.passwordConfirmation}"/>
+                <input type='password' name="password-confirmation" placeholder="Bekräfta Lösenordet" value="{.passwordConfirmation}"/>
                 <span class="help-inline">{.errors.passwordConfirmation}</span>
             </div>
 
             <div class="control-group">
                 <select name="group">
+                        <option value="" selected disabled>Användargrupp</option>
                     {#each .groups as :group}
                         <option value="{:group.id}">{:group.name}</option>
                     {/}
@@ -31,9 +32,9 @@
             </div>
 
             {#if .canSubmit}
-                <input type="submit" value="Register" class="btn"/>
+                <input type="submit" value="Registrera" class="btn"/>
             {else}
-                <input type="submit" value="Register" class="btn disabled" disabled/>
+                <input type="submit" value="Registrera" class="btn disabled" disabled/>
             {/}
         </form>
     {/}
