--- a/components/login/index.html
+++ b/components/login/index.html
@@ -4,12 +4,12 @@
 
             <div class="control-group {#if .errors.username}error{/}">
                 <input type='text' name="username" placeholder="Användarnamn" x-bind="blur:usernameBlur" value="{.username}"/>
-                <span class="help-inline">{.errors.username}</span>
+                <span class="help-block">{.errors.username}</span>
             </div>
 
             <div class="control-group {#if .errors.password}error{/}">
                 <input type='password' name="password" placeholder="Lösenord" value="{.password}"/>
-                <span class="help-inline">{.errors.password}</span>
+                <span class="help-block">{.errors.password}</span>
             </div>
 
             <input type="submit" value="Logga in" class="btn"/>
@@ -25,7 +25,7 @@
             
             <div class="control-group {#if .errors.passwordReset}error{/}">
                 <input type='text' name="email" placeholder="e-post" value="{.passwordResetEmail}"/>
-                <span class="help-inline">{.errors.passwordReset}</span>
+                <span class="help-block">{.errors.passwordReset}</span>
             </div>
 
             <input type="submit" value="Skicka" class="btn"/>
